--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Shivansh Rastogi - Index</title>
+  <title>Shivansh Rastogi</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -269,7 +269,7 @@
               <h4>Bachelor of Technology</h4>
               <h5>2020-2024</h5>
               <p><em>Vellore Institute Of Technology, Bhopal</em></p>
-              <li>CGPA - 8.81</li>
+              <li>CGPA - 8.84</li>
               <li>Academic Projects :</li>
               <p> </p>
               <p>1. Calibriya E-Learning Website (Nov 21 - Dec 21)</p>
@@ -666,7 +666,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>shivansh.rastogi@gmail.com</p>
+                <p>shivansh.rastogi2002@gmail.com</p>
               </div>
 
               <div class="phone">
