--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="shivanshpic.jpeg" rel="icon">
+  <link href="shivanshpic.jpeg" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -65,8 +65,9 @@
         <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
         <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
         <!-- <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a> -->
-        <a href="https://drive.google.com/file/d/1HTUbmcYgPg8oPaXip-YEIqOpRhOr5wiu/view?usp=sharing" class="google-plus"><i class="bx bxl-skype"></i></a>
+        <a href="https://drive.google.com/file/d/1HTUbmcYgPg8oPaXip-YEIqOpRhOr5wiu/view?usp=sharing" class="pdf"><i class="bi bi-file-earmark-pdf"></i></a>
         <a href="https://www.linkedin.com/in/shivansh-rastogi-04bb27225" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://twitter.com/Shivansh_120310" class="twitter"><i class="bi bi-twitter"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -672,7 +673,7 @@
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+91 8595680784</p>
+                <p>+91 9958750160</p>
               </div>
 
             </div>
