--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>12 March 2002</span></li>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li> -->
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 8595680784</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Uttar Pradesh, India</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 9958750160</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Noida, India</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -253,7 +253,7 @@
               <p><em>Innovative and deadline-driven Web Developer and Ml Enthusiast with an experience of many projects.</em></p>
               <ul>
                 <li>Noida, Uttar Pradesh, India</li>
-                <li>+91 8595680784</li>
+                <li>+91 9958750160</li>
                 <li>shivansh.rastogi2002@gmail.com</li>
               </ul>
             </div>
@@ -724,7 +724,7 @@
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/shivansh-rastogi-04bb27225" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>Shivansh Rastogi</span></strong>. All Rights Reserved
