--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="shivanshpic.jpeg" rel="icon">
-  <link href="shivanshpic.jpeg" rel="apple-touch-icon">
+  <link href="shivanshpic1.png" rel="icon">
+  <link href="shivanshpic1.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -87,7 +87,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="shivanshpic.jpeg" class="img-fluid" alt="">
+            <img src="shivanshpic1.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>ML Enthusiast &amp; Web Developer.</h3>
@@ -441,12 +441,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="chatbotpic.jpeg" class="img-fluid" alt="">
+              <img src="chatbotpic.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>ML 1</h4>
                 <p>ML</p>
                 <div class="portfolio-links">
-                  <a href="chatbotpic.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ML 1"><i class="bx bx-plus"></i></a>
+                  <a href="chatbotpic.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ML 1"><i class="bx bx-plus"></i></a>
                   <a href="https://github.com/Shivansh1203/E--Health_portal_ChatBot" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
