--- a/index.html
+++ b/index.html
@@ -441,12 +441,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="chatbotpic.jpg" class="img-fluid" alt="">
+              <img src="chatbotpic1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>ML 1</h4>
                 <p>ML</p>
                 <div class="portfolio-links">
-                  <a href="chatbotpic.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ML 1"><i class="bx bx-plus"></i></a>
+                  <a href="chatbotpic1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ML 1"><i class="bx bx-plus"></i></a>
                   <a href="https://github.com/Shivansh1203/E--Health_portal_ChatBot" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
