--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Glimpses of some of my previous projects in the field of Machine Learning and Web Development</p>
+          <p>Glimpses of some of my previous projects in the field of Machine Learning, Web Development and App Development</p>
         </div>
 
         <div class="row">
