--- a/index.html
+++ b/index.html
@@ -418,12 +418,13 @@
                 <h4>Web 4</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
-                  <a href="B2Dpic.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
+                  <a href="B2Dpic.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 4"><i class="bx bx-plus"></i></a>
                   <a href="https://github.com/Shivansh1203/MERN-prac.Project" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
+
 
           <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
@@ -452,6 +453,21 @@
               </div>
             </div>
           </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="sympathy.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Web 5</h4>
+                <p>Web</p>
+                <div class="portfolio-links">
+                  <a href="sympathy.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 5"><i class="bx bx-plus"></i></a>
+                  <a href="https://github.com/HarshHrs24/Sympathy_Garuda3.0" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
 
           <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
