--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="shivanshpic1.png" class="img-fluid" alt="">
+            <img src="Shivansh clg pic.JPG" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>ML Enthusiast &amp; Web Developer.</h3>
