--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="shivanshpic1.png" rel="icon">
-  <link href="shivanshpic1.png" rel="apple-touch-icon">
+  <link href="Shivansh clg pic.JPG" rel="icon">
+  <link href="Shivansh clg pic.JPG" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -347,7 +347,7 @@
                 <p>App</p>
                 <div class="portfolio-links">
                   <a href="alumniapppic.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                  <a href="https://github.com/Shivansh1203/Alumni_Portal_App" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="https://github.com/Shivansh1203/Alumni_Portal_App" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -361,7 +361,7 @@
                 <p>Web</p>
                 <div class="portfolio-links">
                   <a href="emhpic.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 1"><i class="bx bx-plus"></i></a>
-                  <a href="https://github.com/Shivansh1203/E-Mental-Health-Assistant_Link" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="https://github.com/Shivansh1203/E-Mental-Health-Assistant_Link" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -391,7 +391,7 @@
                 <p>ML</p>
                 <div class="portfolio-links">
                   <a href="youtubemlpic.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ML 2"><i class="bx bx-plus"></i></a>
-                  <a href="https://github.com/Shivansh1203/Machine-Learning-Project" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="https://github.com/Shivansh1203/Machine-Learning-Project" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -405,7 +405,7 @@
                 <p>Web</p>
                 <div class="portfolio-links">
                   <a href="calibriyapic.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
-                  <a href="https://github.com/Shivansh1203/Shivansh1203-Calibriya-E-Library-Project" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="https://github.com/Shivansh1203/Shivansh1203-Calibriya-E-Library-Project" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -419,7 +419,7 @@
                 <p>Web</p>
                 <div class="portfolio-links">
                   <a href="B2Dpic.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 4"><i class="bx bx-plus"></i></a>
-                  <a href="https://github.com/Shivansh1203/MERN-prac.Project" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="https://github.com/Shivansh1203/MERN-prac.Project" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -448,7 +448,7 @@
                 <p>ML</p>
                 <div class="portfolio-links">
                   <a href="chatbotpic1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ML 1"><i class="bx bx-plus"></i></a>
-                  <a href="https://github.com/Shivansh1203/E--Health_portal_ChatBot" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="https://github.com/Shivansh1203/E--Health_portal_ChatBot" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -462,7 +462,7 @@
                 <p>Web</p>
                 <div class="portfolio-links">
                   <a href="sympathy.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 5"><i class="bx bx-plus"></i></a>
-                  <a href="https://github.com/HarshHrs24/Sympathy_Garuda3.0" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="https://github.com/HarshHrs24/Sympathy_Garuda3.0"title="Portfolio Details"<i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -491,7 +491,7 @@
                 <p>Web</p>
                 <div class="portfolio-links">
                   <a href="todopic.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                  <a href="https://github.com/Shivansh1203/Todo_list" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="https://github.com/Shivansh1203/Todo_list" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
