--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>12 March 2002</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Date of Birth:</strong> <span>12 March 2002</span></li>
                   <!-- <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li> -->
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 9958750160</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Noida, India</span></li>
