--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
         <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
         <!-- <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a> -->
-        <a href="https://drive.google.com/file/d/1HTUbmcYgPg8oPaXip-YEIqOpRhOr5wiu/view?usp=sharing" class="pdf"><i class="bi bi-file-earmark-pdf"></i></a>
+        <a href="https://drive.google.com/file/d/1mXIWM--XRqocwpXZpJq1kL8qpADbrTV3/view?usp=share_link" class="pdf"><i class="bi bi-file-earmark-pdf"></i></a>
         <a href="https://www.linkedin.com/in/shivansh-rastogi-04bb27225" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         <a href="https://twitter.com/Shivansh_120310" class="twitter"><i class="bi bi-twitter"></i></a>
       </div>
