--- a/index.html
+++ b/index.html
@@ -287,9 +287,14 @@
               <li>CGPA - 9.01</li>
               <li>Academic Projects :</li>
               <p> </p>
-              <p>1. Calibriya E-Learning Website (Nov 21 - Dec 21)</p>
-              <p>2. E- Mental Health Assistant (Mar 01-Apr 22)</p>
-              <p>3. Ad-view Prediction on YouTube (Feb 22)</p>
+              <p>1. Timeseries forecasting – cl_AI_mate  (Jan 23 - Mar 23)
+                    Description: It aims to predict the heat waves and AQI index for tier-2 cities in Telangana – Adilabad, Nizamabad, Warangal, Karimnagar, and Khammam with a monthly frequency for Jan to Dec 2023. 
+                    Winner - 🏆| Academic Grand Challenge on Climate Change | 7500+ teams | Team cl_AI_mate
+                </p>
+              <p>2. Calibriya E-Learning Website (Nov 21 - Dec 21)</p>
+              <p>3. E- Mental Health Assistant (Mar 01-Apr 22)</p>
+              <p>4. Alumni Portal App (Oct 22)</p>
+              <p>5. Ad-view Prediction on YouTube (Feb 22)</p>
 
             </div>
           </div>
@@ -318,6 +323,7 @@
             <div>
             <h3 class="resume-title">Achievements</h3>
             <div class="resume-item">
+              <li><b>Winner of Academic Grand Challenge on Climate Change organized by T-AIM NASSCOM in collaboration with Capgemini and the Government of Telangana (Jan 23 - Mar 23). Prize money Rs. 5,00,000. Role - Data Analysis and User Interface design</b></li>
               <li>GVDSP Scholarship recipient at VIT</li>
               <li>Cleared round 1 of National Engineering Olympiad (AIR - 2475) Nov 21, round 2 AIR - 661</li>
               <li>Cracked UPSC - NDA Examination and reached the final stage of SSB interview</li>
@@ -344,7 +350,7 @@
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
               <!-- <li data-filter=".filter-app">App</li> -->
-              <li data-filter=".filter-card">ML</li>
+              <li data-filter=".filter-ml">ML</li>
               <li data-filter=".filter-web">Web</li>
               <li data-filter=".filter-app">App</li>
             </ul>
@@ -383,21 +389,63 @@
 
 
 
-          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ml">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <img src="T-AIM_1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 2</h4>
-                <p>App</p>
+                <h4>ML 3.1</h4>
+                <p>ML</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="T-AIM_1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ML 3.1"><i class="bx bx-plus"></i></a>
+                  <a href=" " title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
-          </div> -->
+          </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ml">
+            <div class="portfolio-wrap">
+              <img src="T-AIM_2.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>ML 3.2</h4>
+                <p>ML</p>
+                <div class="portfolio-links">
+                  <a href="T-AIM_2.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ML 3.2"><i class="bx bx-plus"></i></a>
+                  <a href=" " title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ml">
+            <div class="portfolio-wrap">
+              <img src="T-AIM_3.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>ML 3.3</h4>
+                <p>ML</p>
+                <div class="portfolio-links">
+                  <a href="T-AIM_3.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ML 3.3"><i class="bx bx-plus"></i></a>
+                  <a href=" " title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ml">
+            <div class="portfolio-wrap">
+              <img src="T-AIM_4.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>ML 3.4</h4>
+                <p>ML</p>
+                <div class="portfolio-links">
+                  <a href="T-AIM_4.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ML 3.4"><i class="bx bx-plus"></i></a>
+                  <a href=" " title="Portfolio Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ml">
             <div class="portfolio-wrap">
               <img src="youtubemlpic.jpeg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -454,7 +502,7 @@
             </div>
           </div> -->
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-ml">
             <div class="portfolio-wrap">
               <img src="chatbotpic1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
