--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Shivansh Rastogi</h1>
-      <p>I'm <span class="typed" data-typed-items="ML Enthusiast, Developer, Coder, Leader"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Web Developer, T-AIM NASSCOM Capgemini Hackathon Winner, Coder, Leader"></span></p>
       <div class="social-links">
-        <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
         <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
         <!-- <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a> -->
         <a href="https://drive.google.com/file/d/1oZNsunKBtwXjuHJgmUsEGw3LR6UnAeRm/view?usp=share_link" class="pdf"><i class="bi bi-file-earmark-pdf"></i></a>
