--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                     Description: It aims to predict the heat waves and AQI index for tier-2 cities in Telangana – Adilabad, Nizamabad, Warangal, Karimnagar, and Khammam with a monthly frequency for Jan to Dec 2023. 
                     Winner - 🏆| Academic Grand Challenge on Climate Change | 7500+ teams | Team cl_AI_mate
                 </p>
-              <p>2. Calibriya E-Learning Website (Nov 21 - Dec 21)</p>
+              <p>2. Bye2Doubts(Jul 22 - Sep 22)</p>
               <p>3. E- Mental Health Assistant (Mar 01-Apr 22)</p>
               <p>4. Alumni Portal App (Oct 22)</p>
               <p>5. Ad-view Prediction on YouTube (Feb 22)</p>
