--- a/index.html
+++ b/index.html
@@ -57,19 +57,23 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex flex-column justify-content-center">
-    <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Shivansh Rastogi</h1>
-      <p>I'm <span class="typed" data-typed-items="Web Developer, T-AIM NASSCOM Capgemini Hackathon Winner, Coder, Leader"></span></p>
-      <div class="social-links">
-        <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
-        <!-- <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a> -->
-        <a href="https://drive.google.com/file/d/1mXIWM--XRqocwpXZpJq1kL8qpADbrTV3/view?usp=share_link" class="pdf"><i class="bi bi-file-earmark-pdf"></i></a>
-        <a href="https://www.linkedin.com/in/shivansh-rastogi-04bb27225" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        <a href="https://twitter.com/Shivansh_120310" class="twitter"><i class="bi bi-twitter"></i></a>
-      </div>
+
+ <section id="hero" class="d-flex flex-column justify-content-center">
+  
+  <div class="container" data-aos="zoom-in" data-aos-delay="100">
+    <h1>Shivansh Rastogi</h1>
+    <p>I'm <span class="typed" data-typed-items="Web Developer, T-AIM NASSCOM Capgemini Hackathon Winner, Coder, Leader"></span></p>
+    <div class="social-links">
+      <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
+      <!-- <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a> -->
+      <a href="https://drive.google.com/file/d/1mXIWM--XRqocwpXZpJq1kL8qpADbrTV3/view?usp=share_link" class="pdf"><i class="bi bi-file-earmark-pdf"></i></a>
+      <a href="https://www.linkedin.com/in/shivansh-rastogi-04bb27225" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+      <a href="https://twitter.com/Shivansh_120310" class="twitter"><i class="bi bi-twitter"></i></a>
     </div>
-  </section><!-- End Hero -->
+  </div>
+</section>
+     
+<!-- End Hero -->
 
   <main id="main">
 
