--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
         <div class="section-title">
           <h2>About</h2>
           <p>Hi, My name is Shivansh Rastogi I am currently doing my B.tech in Computer Science from VIT,Bhopal.
-            I have a keen interest in web development and machine learning which i am learning now.
-            Did certification course in Machine Learning from InternshipStudio and also did Campus Ambassador Internship for National Engineering Olympiad(NEO) Foundation. Love to explore new things to reach new horizons :)</p>
+            I have a keen interest in Web Development and Machine Learning. Winner of the Academic Grand Challenge on Climate Change organized by Telangana AI Mission (T-AIM), in collaboration with Capgemini, nasscom, and the Government of Telangana.  
+            Love to explore new things to reach new horizons :)</p>
         </div>
 
         <div class="row">
