--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
             <h3 class="resume-title">Achievements</h3>
             <div class="resume-item">
               <li><b>Winner of Academic Grand Challenge on Climate Change organized by T-AIM NASSCOM in collaboration with Capgemini and the Government of Telangana (Jan 23 - Mar 23). Prize money Rs. 5,00,000. Role - Data Analysis and User Interface design</b></li>
-              <li>GVDSP Scholarship recipient at VIT</li>
+              <li>GVDSP Scholarship recipient at VITB</li>
               <li>Cleared round 1 of National Engineering Olympiad (AIR - 2475) Nov 21, round 2 AIR - 661</li>
               <li>Cracked UPSC - NDA Examination and reached the final stage of SSB interview</li>
               <li>Consecutive 5 years scholar badge awardee (Class XII)</li>
@@ -383,7 +383,7 @@
                 <p>Web</p>
                 <div class="portfolio-links">
                   <a href="emhpic.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 1"><i class="bx bx-plus"></i></a>
-                  <a href="https://github.com/Shivansh1203/E-Mental-Health-Assistant_Link" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="#" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -483,7 +483,7 @@
                 <p>Web</p>
                 <div class="portfolio-links">
                   <a href="B2Dpic.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 4"><i class="bx bx-plus"></i></a>
-                  <a href="https://github.com/Shivansh1203/MERN-prac.Project" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="#" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
