--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
                 <p>ML</p>
                 <div class="portfolio-links">
                   <a href="chatbotpic1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ML 1"><i class="bx bx-plus"></i></a>
-                  <a href="https://github.com/Shivansh1203/E--Health_portal_ChatBot" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                  <a href="#" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
