--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="social-links">
       <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
       <!-- <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a> -->
-      <a href="https://drive.google.com/file/d/1mXIWM--XRqocwpXZpJq1kL8qpADbrTV3/view?usp=share_link" class="pdf"><i class="bi bi-file-earmark-pdf"></i></a>
+      <a href="https://drive.google.com/file/d/1mXIWM--XRqocwpXZpJq1kL8qpADbrTV3/view?usp=drive_link" class="pdf"><i class="bi bi-file-earmark-pdf"></i></a>
       <a href="https://www.linkedin.com/in/shivansh-rastogi-04bb27225" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       <a href="https://twitter.com/Shivansh_120310" class="twitter"><i class="bi bi-twitter"></i></a>
     </div>
@@ -286,7 +286,7 @@
               <h4>Bachelor of Technology</h4>
               <h5>2020-2024</h5>
               <p><em>Vellore Institute Of Technology, Bhopal</em></p>
-              <li>CGPA - 9.02</li>
+              <li>CGPA - 9.01</li>
               <li>Academic Projects :</li>
               <p> </p>
               <p>1. Timeseries forecasting – cl_AI_mate  (Jan 23 - Mar 23)
