--- a/index.html
+++ b/index.html
@@ -326,6 +326,8 @@
             <h3 class="resume-title">Achievements</h3>
             <div class="resume-item">
               <li><b>Winner of Academic Grand Challenge on Climate Change organized by T-AIM NASSCOM in collaboration with Capgemini and the Government of Telangana (Jan 23 - Mar 23). Prize money Rs. 5,00,000. Role - Data Analysis and User Interface design</b></li>
+              <li>First Runner-Up of Gen-A-Thon hackathon conducted by IIIT Nagpur</li>
+              <li>Top 1% @Unstop</li>
               <li>GVDSP Scholarship recipient at VITB</li>
               <li>Cleared round 1 of National Engineering Olympiad (AIR - 2475) Nov 21, round 2 AIR - 661</li>
               <li>Cracked UPSC - NDA Examination and reached the final stage of SSB interview</li>
